--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,12 +4,13 @@ version '1.3.1'
 
 buildscript {
     repositories {
-        mavenLocal()
-//        google()
+//        mavenLocal()
+        google()
+        mavenCentral()
 //        jcenter()
         // JitPack 远程仓库：https://jitpack.io
         maven { url 'https://jitpack.io' }
-        maven { url 'https://download.flutter.io'}
+//        maven { url 'https://download.flutter.io'}
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
     }
@@ -21,18 +22,20 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
-        mavenLocal()
-//        google()
+//        mavenLocal()
+        google()
+        mavenCentral()
 //        jcenter()
         // JitPack 远程仓库：https://jitpack.io
         maven { url 'https://jitpack.io' }
-        maven { url 'https://download.flutter.io'}
+//        maven { url 'https://download.flutter.io'}
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
 
         // 一键登录本地依赖
         flatDir {
-            dirs project(':ali_auth').file('libs')
+//            dirs project(':ali_auth').file('libs')
+            dirs 'libs'
         }
     }
 }
@@ -81,12 +84,7 @@ android {
         //    implementation 'com.google.code.gson:gson:2.10.1'
         //    implementation 'com.alibaba:fastjson:1.2.83'
 
-        implementation(name: "auth_number_product-${authLibVersion}-release", ext:'aar')
-        //    implementation(name: "crashshield-${crashshieldVersion}-release", ext:'aar')
-        implementation(name: "logger-${loggerVersion}-release", ext:'aar')
-        implementation(name: "main-${mainVersion}-release", ext:'aar')
-
-        // 吐司框架：https://github.com/getActivity/Toaster
+        implementation fileTree(dir: 'libs', include: ['*.aar'])
         implementation 'com.github.getActivity:Toaster:12.2'
 
         // uc的crash收集库，客户可自行选择是否需要集成
